  Configuration.SERVER_CONNECTION_SECURE renamed to SERVER_CONNECTION_SSL_ENABLED, property name changed to jminor.server.connection.sslEnabled
  Configuration.SERVER_POOLING_INITIAL renamed to SERVER_CONNECTION_POOLING_INITIAL
  EmpDeptProfiling now performs updates as well as selects
  EntityDbConnectionTest refactored
  PropertySearchModel.toString(Object) bug that prevented proper search state string functionality fixed
  EntityRepository.isPrimaryKeyAutoGenerated() added
  EntityEditModel null validation did not handle non-auto generated primary keys
  UiUtil.setWaitCursor() now works with multiple frames/dialogs
  Unit tests migrated to Junit 4
  EntityTableModel.setSortingStatus() simplified
0.5
  EntityTablePanel.showColumn() refactored
  framework.client.ui.property renamings
  IntArray removed
  UserCancelException renamed to CancelException
  Event objects privatized behind a eventXXX() method
  DateUtil.floorDate() added
  Unit test coverage improved somewhat
0.5.1
  EntityTableSearchModel.getSearchCriteriaConjunction() renamed to getSearchConjunction()
  Unit test coverage improved
  EntityDbConnectionPoolTest added
  EntityDbRemoteServerTest added
  Tests added to common.db.dbms package
  Tests added to framework.client.model.reporting
  Unit test coverage improved
  CancelExceptionTest added
  WeakPropertyChangeListenerTest added
  ControlFactory, removed setControlXXX(Control) methods
  Control, setXXX() methods now return the Control instance allowing chained method calls
  EntityApplicationPanelTest added
  MonitorModelTest and MonitorPanelTest added
  Checkstyle run plus lots of minor fixes
  DbConnectionProvider interface added to common.db
  ConnectionPool interface added to common.db
  EntityDbConnectionPool now implements ConnectionPool
  EntityDbConnectionPool renamed to DbConnectionPool and moved to common.db along with test class