@@ -1,5 +1,6 @@
 grant {
   //CodeBase "file:./jminor-server.jar"
+  permission java.io.FilePermission "${user.home}/jminor.log", "read,write";
   permission java.io.FilePermission "${user.home}/jminor.log*", "read,write";
   permission java.io.FilePermission "${user.home}/jminor.log.*", "read,write";
   //the following two lines are for an embedded derby database residing in the server directory
